# C2-Becon

./: .gitignore  CMakeLists.txt  README.md  build.sh  mingw-w64.cmake
docs/: beacon_data_flow_diagram.md  json_schema.md
include/: anti_analysis.h  beacon.h  common.h  comms.h  config.h  config.local.h  crypto.h  evasion.h  injection.h  killswitch.h  ntdefs.h  persist.h  postex.h  recon.h
linux-agent/: CMakeLists.txt
linux-agent/include/: agent.h  comms_linux.h  crypto_linux.h  persist_linux.h  recon_linux.h  tasks_linux.h
linux-agent/src/: comms_linux.c  crypto_linux.c  main_linux.c  persist_linux.c  recon_linux.c  tasks_linux.c
rust/: Cargo.toml
src/: anti_analysis.c  comms.c  crypto.c  dllmain.c  evasion.c  injection.c  killswich.c  killswitch.c  main.c  persist.c  postex.c  recon.c  test_main.c
tools/: hash_gen.c  test_listener.py
